[gd_scene load_steps=8 format=3 uid="uid://eaugywattbgd"]

[ext_resource type="Script" uid="uid://b0rr7icnln6lf" path="res://options.gd" id="1_se8ut"]
[ext_resource type="Script" uid="uid://wcffufrxjmox" path="res://audio_options.gd" id="2_ao2gm"]
[ext_resource type="AudioStream" uid="uid://7cf2yn8xx7ue" path="res://MenuClick.ogg" id="3_07a1d"]
[ext_resource type="Script" uid="uid://bqsbtsg3r7yy4" path="res://game_slider.gd" id="3_p8250"]
[ext_resource type="AudioStream" uid="uid://bbve0abhhyhre" path="res://MenuHover.ogg" id="4_p8250"]
[ext_resource type="Script" uid="uid://dxr2n07j2ngrk" path="res://sfx_slider.gd" id="5_0kfld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_se8ut"]
bg_color = Color(0, 0, 0, 1)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_se8ut")

[node name="AudioOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ao2gm")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 0
offset_left = 52.0
offset_top = 184.0
offset_right = 1103.0
offset_bottom = 462.0

[node name="GameVolume" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Volumen general"

[node name="gameSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05
script = ExtResource("3_p8250")
bus_name = "Master"

[node name="Music" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Musica"

[node name="musicSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05
script = ExtResource("3_p8250")
bus_name = "Music"

[node name="Sound Effects" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Efectos de sonido"

[node name="SFXSlider" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01
script = ExtResource("5_0kfld")
bus_name = "Sound Effects"

[node name="Close" type="Button" parent="AudioOptions"]
layout_mode = 0
offset_left = 403.0
offset_top = 506.0
offset_right = 704.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_se8ut")
text = "Atras"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_07a1d")
bus = &"Sound Effects"

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p8250")
bus = &"Sound Effects"

[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/gameSlider" to="AudioOptions" method="_on_h_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/musicSlider" to="AudioOptions" method="_on_h_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SFXSlider" to="AudioOptions" method="_on_h_slider_3_mouse_exited"]
[connection signal="mouse_entered" from="AudioOptions/Close" to="." method="_on_close_mouse_entered"]
[connection signal="pressed" from="AudioOptions/Close" to="." method="_on_close_pressed"]
